--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <keycloak.version>25.0.5</keycloak.version>
+        <keycloak.version>26.0.5</keycloak.version>
         <jboss-logging.version>3.5.3.Final</jboss-logging.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <guava.version>33.1.0-jre</guava.version>
@@ -106,6 +106,13 @@
             <artifactId>keycloak-model-storage</artifactId>
             <version>${keycloak.version}</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <!-- served by keycloak.server.spi instead -->
+                    <groupId>org.keycloak</groupId>
+                    <artifactId>keycloak-utils</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
